[gd_scene load_steps=38 format=2]

[ext_resource path="res://SinglePlayer/Assets/Wizard/Death.png" type="Texture" id=1]
[ext_resource path="res://SinglePlayer/Player/Player.gd" type="Script" id=8]
[ext_resource path="res://SinglePlayer/Assets/Effects/shadow.png" type="Texture" id=9]
[ext_resource path="res://SinglePlayer/Assets/Effects/Star.png" type="Texture" id=10]
[ext_resource path="res://SinglePlayer/Assets/Wizard/Run.png" type="Texture" id=19]
[ext_resource path="res://SinglePlayer/Assets/Wizard/Idle.png" type="Texture" id=20]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 1000, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 1250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 1500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 20 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 20 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 20 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 20 )
region = Rect2( 750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 20 )
region = Rect2( 1000, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 20 )
region = Rect2( 1250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 20 )
region = Rect2( 1500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 20 )
region = Rect2( 1750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 19 )
region = Rect2( 250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 19 )
region = Rect2( 500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 19 )
region = Rect2( 750, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 19 )
region = Rect2( 1000, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 19 )
region = Rect2( 1250, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 19 )
region = Rect2( 1500, 0, 250, 250 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 19 )
region = Rect2( 1750, 0, 250, 250 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Wizard Dying",
"speed": 8.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "Wizard Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "Wizard Running",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 23.0
height = 32.0

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.5
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Particles2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.0993789, 0.832298, 1 )
colors = PoolColorArray( 0.886275, 0.403922, 0.756863, 0, 0.820313, 0.092926, 0.68961, 1, 0.867188, 0.823521, 0.35907, 1, 1, 0.968627, 0.631373, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 200, 0 )
initial_velocity = 189.9
initial_velocity_random = 0.3
angular_velocity = 3.09
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 3.01
scale_random = 0.5
color_ramp = SubResource( 5 )

[sub_resource type="Animation" id=9]
resource_name = "Death"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.001

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 8 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.4 )
position = Vector2( -7.00001, 51 )
scale = Vector2( 1.60542, 1.14 )
z_index = -1
texture = ExtResource( 9 )

[node name="AnimationSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, -52 )
scale = Vector2( 2.582, 2.461 )
frames = SubResource( 1 )
animation = "Wizard Running"
frame = 4
playing = true

[node name="PlayerHurtbox" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHurtbox"]
position = Vector2( 1, -11 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 5, 5 )
limit_smoothed = true
smoothing_enabled = true

[node name="ShootAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Attack"
playback_speed = 0.1
anims/Attack = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -8, -54 )
one_shot = true
explosiveness = 0.57
process_material = SubResource( 6 )
texture = ExtResource( 10 )

[node name="DeathAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 9 )
anims/RESET = SubResource( 10 )

[connection signal="area_entered" from="PlayerHurtbox" to="." method="_on_HealthPotion_area_entered"]
[connection signal="area_entered" from="PlayerHurtbox" to="." method="enemyContact"]
[connection signal="area_entered" from="PlayerHurtbox" to="." method="_on_Gem_area_entered"]
